--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ database/test/hash_index_test
 database/test/tpcc_populate_test
 database/tpcc/tpcc
 dht/benchmark
+dht/test_dir
 test/benchmark
 test/cs_test
 test/example
